# de-streamlit-sales-analytics

./: .dockerignore  .gitignore  2026-02-27-streamlit-phase1-spec-draft.md  2026-02-27-streamlit-phase1-spec-handoff.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: container-build.yml
.streamlit/: config.toml
docs/: dev-fixtures.md  homelab-handoff.md  runtime-contract.md
fixtures/sales_seed/: dim_salesforce_accounts.parquet  fct_salesforce_opportunities.parquet  opportunity_history_snapshot.parquet
openspec/changes/archive/2026-02-27-streamlit-phase1-k8s-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-add-sqlite-dev-mode-fixtures/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-raise-python-baseline-to-3-13/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-streamlit-best-practice-alignment/: design.md  proposal.md  tasks.md
openspec/changes/harden-streamlit-runtime-import-and-postgres-driver/: design.md  proposal.md  tasks.md
openspec/specs/local-dev-sqlite-fixtures/: spec.md
openspec/specs/python-runtime-baseline/: spec.md
openspec/specs/streamlit-phase1-dashboard/: spec.md
openspec/specs/streamlit-theming-baseline/: spec.md
scripts/: generate_dev_fixtures.py
streamlit_app/: __init__.py  app.py  config.py  contracts.py  data_access.py  dev_fixtures.py  filters.py  freshness.py  health.py  metrics.py  tabs.py
tests/: test_app_views.py  test_data_access_backends.py  test_filters.py  test_freshness.py  test_metrics.py
(+8 files in other folders)
